added sorting feature to city and county list

--- a/app/home/view.html
+++ b/app/home/view.html
@@ -4,15 +4,12 @@
       <div class="left_content">
         <!-- Welcome Section -->
         <welcome></welcome>
-        <div class="row">
-          <!-- Featured Treatment Center Section -->
-          <featured-treatment-center listings="$ctrl.listings"></featured-treatment-center>
-          <!-- Search By State Section -->
-          <search-by-state></search-by-state>
-          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-            <img class="img-responsive" id="footer_ad">
-          </div>
-        </div>
+        <!-- Featured Treatment Center Section -->
+        <featured-treatment-center></featured-treatment-center>
+        <!-- Search By State Section -->
+        <search-by-state></search-by-state>
+        <!-- footer ad -->
+        <footer-ad></footer-ad>
       </div>
     </div>
     <side-panel></side-panel>
