--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -1,6 +1,6 @@
 <div class="left_content left_align">
-  <div ng-show="$ctrl.displayError" class="sponsor-listing-error">
-    <p class="sponsor-listing-error-text">Oops! We are currently unable to provide any listings at this area. Sorry for any inconvenience.</p>
+  <div ng-show="$ctrl.displayError" class="empty-list-error">
+    <p class="empty-list-error-text">Oops! We are currently unable to provide any listings at this area. Sorry for any inconvenience.</p>
   </div>
   <div ng-hide="$ctrl.displayError" class="sponsor-listing">
     <section-heading>{{ $ctrl.entry.heading_1 }}</section-heading>
@@ -34,13 +34,6 @@
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
         <section-heading>{{ $ctrl.entry.heading_2 }}</section-heading>
         <p>{{ $ctrl.entry.content_2 }}</p>
-      </div>
-
-      <!-- footer ad -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
-        <div class="company_adds">
-          <img class="img-reponsive" id="footer_ad">
-        </div>
       </div>
 
     </div>
