--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -1,5 +1,7 @@
 <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12 ">
   <find-treatment-side-card></find-treatment-side-card>
+  <view-counties-card></view-counties-card>
+  <view-cities-card></view-cities-card>
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
     <div class="right_content">
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
@@ -7,7 +9,6 @@
       </div>
     </div>
   </div>
-  <location-filter-card></location-filter-card>
   <side-card type="Demographic"></side-card>
   <side-card type="Treatment Approach"></side-card>
   <side-card type="Setting"></side-card>
