--- a/app/sponsorHome/cityListBox/view.html
+++ b/app/sponsorHome/cityListBox/view.html
@@ -1,10 +1,15 @@
 <div class="left_content">
   <section-heading>
-    Browse the Best Rehabs in {{ $ctrl.stateName }}
+    Browse the Best Rehabs in {{ $ctrl.countyName }}
   </section-heading>
-  <section>
+
+  <!-- empty listings error-->
+  <empty-list-error display="$ctrl.displayError"></empty-list-error>
+
+  <!-- city list -->
+  <section ng-hide="$ctrl.displayError">
     <ul class="list-locations list-columns">
-      <li ng-repeat="city in $ctrl.places track by $index">
+      <li ng-repeat="city in $ctrl.cities track by $index">
         <a href ng-click="$ctrl.goToCity(city)">
           <i class="glyphicon glyphicon-map-marker"></i>{{ city }}
         </a>
