--- a/app/treatmentCenterDetail/view.html
+++ b/app/treatmentCenterDetail/view.html
@@ -1,9 +1,7 @@
 <div class="middle_content_div margin_top_new">
   <div class="container">
     <div class="left_content top_text">
-      <h1>
-        <label>{{ $ctrl.entry.center_name }}</label>
-      </h1>
+      <section-heading>{{ $ctrl.entry.center_name }}</section-heading>
     </div>
     <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
@@ -12,9 +10,7 @@
 
         <div class="left_content">
           <!-- Detail -->
-          <h1>
-            <label>{{ $ctrl.entry.center_name}} Details</label>
-          </h1>
+          <section-heading>{{ $ctrl.entry.center_name }} Details</section-heading>
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -61,34 +57,32 @@
           </div>
 
           <!--   About us    -->
-          <h1 class="display_full">
-            <label>{{ $ctrl.entry.heading_1 }}</label>
-          </h1>
-          <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12 ">
-            <span class="text_style_about margin_bottom_adjust_go">{{ $ctrl.entry.content_1 }}</span>
+          <div class="row">
+            <section-heading>{{ $ctrl.entry.heading_1 }}</section-heading>
+            <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12 ">
+              <span class="text_style_about margin_bottom_adjust_go">{{ $ctrl.entry.content_1 }}</span>
+            </div>
           </div>
 
           <!--   Treatment Approach    -->
-          <h1 class="display_full">
-            <label>{{ $ctrl.entry.heading_2 }}</label>
-          </h1>
-          <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12">
-            <span class="text_style_about margin_bottom_adjust_go">{{ $ctrl.entry.content_2 }}</span>
+          <div class="row">
+            <section-heading>{{ $ctrl.entry.heading_2 }}</section-heading>
+            <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12">
+              <span class="text_style_about margin_bottom_adjust_go">{{ $ctrl.entry.content_2 }}</span>
+            </div>
           </div>
 
-          <!--   Unique Points   -->
-          <h1 class="display_full">
-            <label>{{ $ctrl.entry.heading_3 }}</label>
-          </h1>
-          <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12">
-            <span class="text_style_about margin_bottom_adjust_go">{{ $ctrl.entry.content_3 }}</span>
+          <div class="row">
+            <!--   Unique Points   -->
+            <section-heading>{{ $ctrl.entry.heading_3 }}</section-heading>
+            <div class="margin_top_adjust_go col-md-12 col-sm-12 col-xs-12">
+              <span class="text_style_about margin_bottom_adjust_go">{{ $ctrl.entry.content_3 }}</span>
+            </div>
           </div>
 
           <!--   Reviews    -->
-          <h1 class="display_full">
-            <label>{{ $ctrl.entry.heading_4 }}</label>
-          </h1>
           <div class="row">
+            <section-heading>{{ $ctrl.entry.heading_4 }}</section-heading>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
                 <div class="col-md-4 col-sm-4 col-xs-12">
