--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -296,9 +296,7 @@
       <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
           <div class="right_content ">
-            <h2>
-              <label>Advertisements</label>
-            </h2>
+            <card-heading>Advertisements</card-heading>
           </div>
           <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
             <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
