--- a/app/sidePanel/sideCard/view.html
+++ b/app/sidePanel/sideCard/view.html
@@ -1,8 +1,6 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
   <div class="right_content">
-    <h2>
-      <label>{{ $ctrl.filter }}</label>
-    </h2>
+    <card-heading>{{ $ctrl.filter }}</card-heading>
     <ul class="list-unstyled">
       <li ng-repeat="listing in $ctrl.listings">
         <a href ng-click="$ctrl.nagivateTo(listing)">
