--- a/app/sidePanel/viewCitiesCard/view.html
+++ b/app/sidePanel/viewCitiesCard/view.html
@@ -1,8 +1,6 @@
 <div ng-show="$ctrl.display" class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
   <div class="right_content">
-    <h2 class="right-section-heading">
-      <label>{{ $ctrl.countyName }} / {{ $ctrl.stateName }}</label>
-    </h2>
+    <card-heading>{{ $ctrl.countyName }} / {{ $ctrl.stateName }}</card-heading>
     <ul class="list-unstyled">
       <li>
         <a href ng-click="$ctrl.goToCities()">View All Cities</a>
