--- a/app/treatmentCenterDetail/view.html
+++ b/app/treatmentCenterDetail/view.html
@@ -1,17 +1,15 @@
 <div class="middle_content_div margin_top_new">
   <div class="container">
-    <div class="left_content top_text">
-      <section-heading>{{ $ctrl.entry.center_name }}</section-heading>
-    </div>
+    <section-heading>{{ $ctrl.entry.center_name }}</section-heading>
     <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-        <!-- slider -->
-        <center-detail-carousel images="$ctrl.entry.center_images"></center-detail-carousel>
-
         <div class="left_content">
+          <!-- slider -->
+          <center-detail-carousel images="$ctrl.entry.center_images"></center-detail-carousel>
+
           <!-- Detail -->
-          <section-heading>{{ $ctrl.entry.center_name }} Details</section-heading>
           <div class="row">
+            <section-heading>{{ $ctrl.entry.center_name }} Details</section-heading>
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
                 <div class="col-md-4 col-sm-4 col-xs-12">
@@ -97,12 +95,8 @@
               <!-- Write Review -->
               <review-form-box center-id="$ctrl.entry.id" on-submit-success="$ctrl.onReviewSubmitSuccess()">
               </review-form-box>
-
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
-                <div class="company_adds">
-                  <img class="img-reponsive" id="footer_ad">
-                </div>
-              </div>
+              <!-- footer ad -->
+              <footer-ad></footer-ad>
             </div>
           </div>
         </div>
@@ -129,16 +123,11 @@
             </p>
           </div>
         </div>
-        <div class="detail_form_main map_margin">
-          <div class="detail_heading">{{ $ctrl.entry.address }}
-            <h2>
-              <label>Map</label>
-            </h2>
-          </div>
+        <div class="right_content center-detail-card">
+          <p class="center-detail-map-address">{{ $ctrl.entry.address }}</p>
+          <card-heading>Map</card-heading>
           <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 main_wrap_form_inner_sub">
-            <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-              <iframe width="100%" height="250px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" ng-src="{{ $ctrl.entry.mapLink }}"></iframe>
-            </div>
+            <iframe width="100%" height="250px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" ng-src="{{ $ctrl.entry.mapLink }}"></iframe>
           </div>
         </div>
 
