--- a/app/index.html
+++ b/app/index.html
@@ -407,7 +407,7 @@
     <status-view></status-view>
     <!-- Middle Content-->
     <div class="middle_content_div" ng-controller="advertisementCtrl">
-      <ui-view></ui-view>
+      <ui-view autoscroll="true"></ui-view>
     </div>
     <!-- End Middle Content-->
 
