--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -1,7 +1,6 @@
 <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12 ">
   <find-treatment-side-card></find-treatment-side-card>
-  <view-counties-card></view-counties-card>
-  <view-cities-card></view-cities-card>
+  <area-filter-card></area-filter-card>
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
     <div class="right_content">
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
