added displayError in cityListBox component

--- a/app/sponsorHome/cityListBox/view.html
+++ b/app/sponsorHome/cityListBox/view.html
@@ -4,7 +4,7 @@
   </section-heading>
 
   <!-- empty listings error-->
-  <empty-list-error display="$ctrl.cities.length === 0"></empty-list-error>
+  <empty-list-error display="$ctrl.displayError"></empty-list-error>
 
   <!-- city list -->
   <section ng-hide="$ctrl.displayError">
