--- a/app/aboutUs/view.html
+++ b/app/aboutUs/view.html
@@ -4,7 +4,7 @@
       <content></content>
       <div class="row">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-          <img class="img-responsive" id="footer_ad">
+          <footer-ad></footer-ad>
         </div>
       </div>
     </div>
