--- a/app/login/view.html
+++ b/app/login/view.html
@@ -26,7 +26,7 @@
           <div id="error_if"></div>
         </div>
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-          <img class="img-responsive" id="footer_ad">
+          <footer-ad></footer-ad>
         </div>
       </div>
     </form>
