--- a/app/myProfile/view.html
+++ b/app/myProfile/view.html
@@ -2,8 +2,10 @@
   <div class="row">
     <!-- Left Section  -->
     <profile-nav-section profile-pic="$ctrl.profile.profile_pic"></profile-nav-section>
-
     <!-- Right Section  -->
     <ui-view></ui-view>
+    <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9 pull-right">
+      <footer-ad></footer-ad>
+    </div>
   </div>
 </div>
